--- a/workflow/envs/evaluate.yaml
+++ b/workflow/envs/evaluate.yaml
@@ -4,11 +4,13 @@ channels:
   - defaults
 dependencies:
   - biopython 
+  - hnswlib
   - matplotlib 
   - nbconvert
   - notebook
   - numpy 
   - pandas 
+  - pynndescent
   - python >= 3.9
   - python-intervaltree
   - requests
