--- a/workflow/envs/evaluate.yaml
+++ b/workflow/envs/evaluate.yaml
@@ -2,6 +2,7 @@ channels:
   - conda-forge
   - bioconda
   - defaults
+  - pytorch
 dependencies:
   - anndata == 0.10.7 
   - biopython 
@@ -19,4 +20,5 @@ dependencies:
   - scikit-learn == 1.5.0
   - pysam == 0.22.1
   - sharedmem 
-
+  - mmh3
+  - faiss-cpu
